# OPTest

./: CMakeLists.txt  library.h  main.c  matrix_test.c  vec.c
OP/: lab20.c  lab20.h
libs/algorithms/: CMakeLists.txt  algorithm.c  algorithm.h
libs/algorithms/array/: array.c  array.h
libs/data_structures/: CMakeLists.txt
libs/data_structures/bitset/: bitset.c  bitset.h
libs/data_structures/files/: files.c  files.h
libs/data_structures/matrix/: matrix.c  matrix.h
libs/data_structures/string/: string_.c  string_.h
libs/data_structures/string/tasks/: str_test.c  str_test_2.c
libs/data_structures/unordered_set/: unordered_array_set.c  unordered_array_set.h
libs/data_structures/vector/: vector.c  vector.h  vectorVOID.c  vectorVOID.h
